@@ -1,5 +1,8 @@
 2015-04-02  Giuseppe Scrivano  <gscrivan@redhat.com>
 
+	* src/arch/linux_generic.c (roach_syscall_inhibit): Remove magic
+	number and use __NR_getpid.
+
 	* src/roach.c (roach_wait): Pass the pid of the stopped process to
 	the hook function.
 	* src/roach.h: Add argument "pid" to roach_syscall_inhibit.
